Implemented support for modulepath - bootstrap libs use it.
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>